--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@
 body {
   padding: 0.3rem 1rem;
 }
+html {
+  overflow-x: hidden;
+}
+html::-webkit-scrollbar {
+  display: none;
+}
 * {
   margin: 0;
   padding: 0;
@@ -28,4 +34,13 @@ body {
 }
 .project-view {
   box-shadow: var(--card-shadow);
+}
+
+@keyframes slideDown {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100vh;
+  }
 }
